--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'Open Sans';
     src: local('Open Sans Bold'), local('OpenSans-Bold'),
-        url('/fonts/OpenSans-Bold.woff2') format('woff2'),
-        url('/fonts/OpenSans-Bold.woff') format('woff');
+        url('../fonts/OpenSans-Bold.woff2') format('woff2'),
+        url('../fonts/OpenSans-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
